Edit: 사이트 설명,제목 수정

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="D'Amo 직원 명단 관리 사이트입니다."
     />
-    <title>React App</title>
+    <title>D'Amo 직원 명단 관리 사이트</title>
   </head>
   <body>
     <div id="root"></div>
