--- a/front/public/index.html
+++ b/front/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="D'Amo 직원 명단 관리 사이트입니다."
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <title>D'Amo 직원 명단 관리 사이트</title>
   </head>
   <body>
